--- a/Client.html
+++ b/Client.html
@@ -347,7 +347,7 @@
         }
     }
 </style>
-<body>
+<body  oncontextmenu="return false;">
     <!--
     Roast properties:
         date time, roast name, blend, individual bean types, batch, weights, volumes,
@@ -1430,10 +1430,19 @@
                 }
             }
 
+            //TODO
+            //instead of calculating avg bean temps over and over again
+            //create an array of averaged/filtered values
+            //keep a window of moving average of 4 seconds
+            //keep track of min/max values in that window
+            //if min/max difference is >5 degrees then filter out the top outliers
+            //then just need to sample the averaged filtered values when grabbing bean temps
+            //same goes for rate of rise
+
             #calcAvgBeanTemperature(index)
             {
-                //TODO testing
-                return this.#beanTemperatures[index][1][32 * (23 - 19) + 12];
+                //testing
+                //return this.#beanTemperatures[index][1][32 * (23 - 19) + 12];
 
                 //calculate average bean temperature
                 var avg = 0.0;
@@ -1442,13 +1451,11 @@
                 //x left 0, right 31
                 //y top 0, bottom 23 
 
-                //for (x = 0; x < 32; ++x)
-                for (var x = 5; x < 20; ++x)
-                    //for (y = 0; y < 24; ++y) {
-                    for (var y = 13; y < 24; ++y) {
+                for (var x = 0; x < 32; ++x)
+                    for (var y = 0; y < 24; ++y) {
                         //average some pre-specified area of pixels
-                        avg += this.#beanTemperatures[index][1][32 * (23 - y) + x];
-                        counter++;
+                        avg += this.#beanTemperatures[index][1][32 * (23 - y) + x] * beanFilterMask[32 * (23 - y) + x];
+                        counter += beanFilterMask[32 * (23 - y) + x];
                     }
                 avg /= counter;
 
@@ -1890,6 +1897,24 @@
 
             setTimeout(dummyData.bind(null, t + 0.250), 250);
         }
+
+        function drawBeanFilterMask(mask) {
+                var canvas = document.getElementById("thermalCamera");
+                canvas.style.visibility = "visible";
+                canvas.width = 320;
+                canvas.height = 240;
+                var canvasCtx = canvas.getContext("2d");
+
+                //x left 0, right 31
+                //y top 0, bottom 23 
+                for (x = 0; x < 32; ++x)
+                    for (y = 0; y < 24; ++y) {
+                        val = mask[32 * (23 - y) + x];
+
+                        canvasCtx.fillStyle = val > 0 ? "#FFFFFF" : "#000000";
+                        canvasCtx.fillRect(x * 10, y * 10, 10, 10);
+                    }
+        }
         
         function drawThermalCameraOutput(temperatures) {
             if (updateUI) {
@@ -1915,7 +1940,7 @@
 
                         temp = temperatures[32 * (23 - y) + x];
 
-                        if ((x == 11 || x == 13) && (y == 18 || y == 20)) { temp = 0; }
+                        //if ((x == 11 || x == 13) && (y == 18 || y == 20)) { temp = 0; }
 
                         //map temperatures to 0..1
                         minTemp = min;//10.0; //-40c
@@ -1982,6 +2007,26 @@
                     barwidth,
                     val / mostFrequentVal * canvasHeight);
                 counter++;
+            }
+        }
+
+        function thermalCamClick(e) {
+            //TODO add button to toggle accepting editing this mask
+            if (true) {
+                var x = Math.floor(e.offsetX / 10.0);
+                var y = Math.floor(e.offsetY / 10.0);
+                var samplePos = 32 * (23 - y) + x;
+
+                if (e.type == "click") {
+                    //left click, add to mask
+                    beanFilterMask[samplePos] = 1.0;
+                }
+                else if (e.type == "contextmenu") {
+                    //right click, remove from mask
+                    beanFilterMask[samplePos] = 0.0;
+                }
+
+                drawBeanFilterMask(beanFilterMask);
             }
         }
 
@@ -2081,6 +2126,7 @@
             if (beanTemperatures != null)
             {
                 drawThermalCameraOutput(new Float32Array(beanTemperatures));
+                drawBeanFilterMask(beanFilterMask);
             }
     
             document.getElementById("lineChartTooltip").style.left = xPos + 'px';
@@ -2225,8 +2271,16 @@
         var roastProfile = null;
         var webSocket = null;
         var lineChart = null;
+        var beanFilterMask = null;
 
         (function () {
+            //fill mask with values
+            beanFilterMask = new Float32Array(768);
+            for (var x = 5; x < 20; ++x)
+                for (var y = 13; y < 24; ++y) {
+                    beanFilterMask[32 * (23 - y) + x] = 1.0;
+                }
+
             lineChart = new LineChart(document.getElementById("lineChart"),
                 1400, //width           default: 1400
                 800, //height           default: 800
@@ -2256,6 +2310,8 @@
             document.getElementById("thermalCamera").addEventListener("mousemove", thermalCamMove);
             document.getElementById("thermalCamera").addEventListener("mouseenter", thermalCamEnter);
             document.getElementById("thermalCamera").addEventListener("mouseleave", thermalCamLeave);
+            document.getElementById("thermalCamera").addEventListener("click", thermalCamClick);
+            document.getElementById("thermalCamera").addEventListener("contextmenu", thermalCamClick);
 
             document.getElementById("lineChart").addEventListener("mousemove", lineChartMove);
             document.getElementById("lineChart").addEventListener("mouseenter", lineChartEnter);
